// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba <GifExpertApp /> Deve mostrare una lista di categorie 1`] = `
<Fragment>
  <h2>
     GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <SetElements
    setElements={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      elements={10}
      key="0"
    />
    <GifGrid
      category="Dragon Ball"
      elements={10}
      key="1"
    />
  </ol>
</Fragment>
`;

exports[`Prueba <GifExpertApp /> Test Snapshot 1`] = `
<Fragment>
  <h2>
     GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <SetElements
    setElements={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
